css/style.css
/* VARIABLES  */

:root {
    --color-primario: #ABEBC6;
    --color-btn: #6F7D9B;
    --color-sencundario: #9addd1;
    --color-background: #dbd4d4;
    --color-texto: #c9c9c9;
    --text-default: 'Nunito', sans-serif;
}

/* GENERALES */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
    font-family: var(--text-default);
}
/* BODY BACKGROUND */

/* background: rgb(25,30,41);
background: linear-gradient(180deg, rgba(25,30,41,1) 0%, rgba(19,45,70,1) 50%, rgba(25,30,41,1) 100%); */

body { 
    background: rgb(25,30,41);
    background: linear-gradient(180deg, rgba(25,30,41,1) 0%, rgba(19,45,70,1) 50%, rgba(25,30,41,1) 100%);
}

header {
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 100px;
    width: 100%;
    background: #191E29;
    -webkit-box-shadow: 0px -10px 223px -26px rgba(1,195,141,0.29);
    -moz-box-shadow: 0px -10px 223px -26px rgba(1,195,141,0.29);
    box-shadow: 0px -10px 223px -26px rgba(1,195,141,0.29);    
    letter-spacing: 4px;
    z-index: 1; 
    
}
header i {
    color: var(--color-texto);
    visibility: hidden;
    font-size: 30px;
}

header .logo h1 {
    font-family: 'Satisfy', cursive;
    color: var(--color-texto);
    cursor: pointer;
}

header .nav {
    display: flex;
    align-items: center;
}

header .nav ul  {
    display: flex;
    list-style: none;
    justify-content: center;
    gap: 50px;
}

header .nav ul li a {
    text-decoration: none;
    color: var(--color-texto);
    transition: all 1s;  
    border-bottom: 1px solid transparent;  
}

header .nav li a:hover {
    border-bottom: 1px solid;  

}

.sections {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.projects {
    display: flex;
    margin-bottom: 20px; 
    justify-content: center;
    flex-wrap: wrap;
    width: 100%;

}

.projects
.card  {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 6px;
    width: 20%;
    background: #191E29;
    border: 1px;
    border-radius: 10px;
    height: 35vh;
    cursor: pointer;
    transition: all 0.5s;
}

.projects .card:hover {
    transform: scale(1.02);
}

.projects .card img {
    width: 100%;
    height: 50%;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.projects .card .cuerpo-card{
    display: flex;
    color: var(--color-texto);
    flex-direction: column;
    margin: 10px;
    gap: 10px;
    
}

.projects .card .cuerpo-card p {
    text-align: justify;
}


.principal {
    display: flex;
    flex-direction: column;
    flex-basis: 100;
    color: var(--color-texto);
}

.principal h1 {
    text-align: center;
    color: var(--color-texto);
}

.community {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 800px;
    align-items: center;

}

.community div {
    margin: 30px;
    padding-top: 10px;
    text-align: center;
}

.community-info p {
    padding-bottom: 20px;
    text-align: center;

}

.community-info li {
    padding: 10px;
}

.community-info img {
    width: 60%;
    border-radius: 20px;

}

.community-info button {
    width: 30%;
    height: 50px;
    border: none;
    border-radius: 40px;
    background: #7289da;
    cursor: pointer;
    transition: all 1s;
}

.community-info button a {
    text-decoration: none;
    color: var(--color-texto);
}

.community-info button:hover {
    -webkit-box-shadow: 1px 9px 58px 6px rgba(0,0,0,0.79);
    -moz-box-shadow: 1px 9px 58px 6px rgba(0,0,0,0.79);
    box-shadow: 1px 9px 58px 6px rgba(0,0,0,0.79);
}

footer {
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-direction: column;
    background: #191E29;
    -webkit-box-shadow: 0px -10px 223px -26px rgba(1,195,141,0.29);
    -moz-box-shadow: 0px -10px 223px -26px rgba(1,195,141,0.29);
    box-shadow: 0px -10px 223px -26px rgba(1,195,141,0.29);    
    text-align: center;
    font-size: 100%;
    height: 100%;
    width: 100%;
    color: var(--color-texto);

}

footer
.derechos {
    height: 100px;
    padding-top: 50px;
}

footer
.footer-title{
    padding-bottom: 30px;
    margin-top: 30px;
}

footer a {
    margin: 20px;
    color: #fff;
    transition: all 1s;
}

footer a:hover {
    color: #f6cdcd;
}
@media screen and (max-width: 1500px) {
    .sections .projects {
        flex-direction: column;
        align-items: center;
    }
}
@media screen and (max-width: 600px) {
    header {
        top: 0;
    }

    header i {
        visibility: visible;
    }

    .projects
    .card  {
        width: 90%;
    }

    header .nav ul {
        align-items: center;
        flex-direction: column;
        width: 100%;
        height: 100vh;
        position: fixed;
        gap: 100px;
        right: 0;
        top: 0;
        background: rgb(25,30,41);
        background: linear-gradient(180deg, rgba(25,30,41,1) 0%, rgba(19,45,70,1) 50%, rgba(25,30,41,1) 100%);
        transform: translateX(100%);
    }

    header .nav ul.active {
        transform: translateX(0%);
    }

    .community-info img {
        width: 50%;
        height: 500px;
        border-radius: 20px;
    
        content: url(../images/community-cel.gif);
    }

    .community-info button {
        width: 50%;
    }

    .community {
        height: 100%;
    }

    .projects .redirect {
        overflow: hidden;
    }
     
}

@media screen and (min-width: 500px) {
    .container {
        justify-content: center;
    }
    
}

